# stonkmap

./: .gitignore  AGENTS.md  Dockerfile.backend  README.md  config.example.yaml  docker-compose.yml  indexes.yaml  pyproject.toml
docs/: design.md
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/scripts/: smoke.mjs
frontend/src/: App.test.tsx  App.tsx  api.ts  format.ts  styles.css  types.ts
frontend/src/components/: Heatmap.test.tsx  Heatmap.tsx  StatPill.tsx  StockModal.tsx
sample-data/: core-portfolio.csv  income-portfolio.csv
src/stonkmap/: __init__.py  config.py  dashboard.py  database.py  main.py  market_symbols.py  models.py  portfolio.py
src/stonkmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stonkmap/indexes/: __init__.py  parsers.py  service.py
src/stonkmap/prices/: __init__.py  service.py
tests/: test_api.py  test_parsers.py
tests/fixtures/: betashares_sample.csv  blackrock_sample.xml  vaneck_sample.json  vanguard_holdings_sample.json
user-data/: gumtree-prop1.csv
